--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Hydra Template
-url: "https://proud-alligator.cloudvent.net"
+url: 
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
